--- a/rear-end/package.json
+++ b/rear-end/package.json
@@ -21,7 +21,11 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@google/genai": "^1.24.0",
+    "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
-    "express": "4.18.3"
+    "dotenv": "^17.2.3",
+    "express": "4.18.3",
+    "undici": "^7.16.0"
   }
 }
