--- a/sse-demo/package.json
+++ b/sse-demo/package.json
@@ -10,13 +10,20 @@
   },
   "dependencies": {
     "@devui-design/icons": "^1.4.0",
+    "@element-plus/icons-vue": "^2.3.2",
     "@matechat/core": "^1.9.0",
+    "element-plus": "^2.11.5",
+    "lodash-es": "^4.17.21",
     "vue": "^3.5.22",
-    "vue-devui": "^1.6.34"
+    "vue-devui": "^1.6.34",
+    "vue-router": "^4.6.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
     "sass-embedded": "^1.93.2",
+    "unocss": "^66.5.4",
+    "unplugin-auto-import": "^20.2.0",
+    "unplugin-vue-components": "^30.0.0",
     "vite": "^7.1.7"
   }
 }
