--- a/sse-demo/package.json
+++ b/sse-demo/package.json
@@ -14,6 +14,7 @@
     "@matechat/core": "^1.9.0",
     "element-plus": "^2.11.5",
     "lodash-es": "^4.17.21",
+    "pinyin-pro": "^3.27.0",
     "vue": "^3.5.22",
     "vue-devui": "^1.6.34",
     "vue-router": "^4.6.2"
